--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #0a0f1c;
+    background-color: #e8f4f6;
+    color:#0d1e2d;
+    margin: 0;
+}
+
+header {
+    background-color: #003366;
     color: white;
+    padding: 1rem;
+    text-align: center;
 }
 
 nav {
     margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem;
+
 }
 
 a {
@@ -14,6 +27,35 @@ a {
     text-decoration: none;
     color: #333;
 }
+
+nav a {
+    color: #003366;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: #66cce0;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+}
+
+nav a:hover {
+    background-color: #4f7f8d;
+    color: white;
+}
+
+main.info-grid {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1.5rem;
+}
+
+section {
+    background-color: #ffffff;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
 
 .galeria {
     display: flex;
