--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    text-align: center;
+    text-align: justify;
     background-color: #e8f4f6;
     color:#0d1e2d;
     margin: 0;
