--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     margin: 0;
 }
 
+h2 {
+    text-align:center;
+    color:#0d1e2d; 
+}
 header {
     background-color: #003366;
     color: white;
